syntax = "proto3";

message ProtoDate {
  uint32 date = 1;
}